@@ -1046,46 +1046,6 @@ tasks:
   - name: check-headers
     commands:
       - func: check-headers
-  - name: "check:sasl=Cyrus\_\u2022\_tls=LibreSSL\_\u2022\_test_mongocxx_ref=r3.8.0"
-    run_on:
-      - ubuntu2204-large
-      - debian10-large
-      - debian11-large
-      - amazon2
-    tags: [earthly, pr-merge-gate, alpine3.16-clang, alpine3.16-gcc, alpine3.17-clang, alpine3.17-gcc, alpine3.18-clang, alpine3.18-gcc, alpine3.19-clang, alpine3.19-gcc, archlinux-clang, archlinux-gcc]
-    commands:
-      - command: subprocess.exec
-        type: setup
-        params:
-          binary: bash
-          args:
-            - -c
-            - docker login -u "${artifactory_username}" --password-stdin artifactory.corp.mongodb.com <<<"${artifactory_password}"
-      - command: subprocess.exec
-        type: setup
-        params:
-          binary: ./tools/earthly.sh
-          working_dir: mongoc
-          args:
-            - +env-warmup
-            - --sasl=Cyrus
-            - --tls=LibreSSL
-            - --test_mongocxx_ref=r3.8.0
-            - --env=${MONGOC_EARTHLY_ENV}
-            - --c_compiler=${MONGOC_EARTHLY_C_COMPILER}
-      - command: subprocess.exec
-        type: test
-        params:
-          binary: ./tools/earthly.sh
-          working_dir: mongoc
-          args:
-            - +run
-            - --targets=test-example test-cxx-driver
-            - --sasl=Cyrus
-            - --tls=LibreSSL
-            - --test_mongocxx_ref=r3.8.0
-            - --env=${MONGOC_EARTHLY_ENV}
-            - --c_compiler=${MONGOC_EARTHLY_C_COMPILER}
   - name: "check:sasl=Cyrus\_\u2022\_tls=LibreSSL\_\u2022\_test_mongocxx_ref=r3.9.0"
     run_on:
       - ubuntu2204-large
@@ -1164,46 +1124,6 @@ tasks:
             - --sasl=Cyrus
             - --tls=OpenSSL
             - --test_mongocxx_ref=none
-            - --env=${MONGOC_EARTHLY_ENV}
-            - --c_compiler=${MONGOC_EARTHLY_C_COMPILER}
-  - name: "check:sasl=Cyrus\_\u2022\_tls=OpenSSL\_\u2022\_test_mongocxx_ref=r3.8.0"
-    run_on:
-      - ubuntu2204-large
-      - debian10-large
-      - debian11-large
-      - amazon2
-    tags: [earthly, pr-merge-gate, alpine3.16-clang, alpine3.16-gcc, alpine3.17-clang, alpine3.17-gcc, alpine3.18-clang, alpine3.18-gcc, alpine3.19-clang, alpine3.19-gcc, archlinux-clang, archlinux-gcc, u18-clang, u20-clang, u20-gcc, u22-clang, u22-gcc]
-    commands:
-      - command: subprocess.exec
-        type: setup
-        params:
-          binary: bash
-          args:
-            - -c
-            - docker login -u "${artifactory_username}" --password-stdin artifactory.corp.mongodb.com <<<"${artifactory_password}"
-      - command: subprocess.exec
-        type: setup
-        params:
-          binary: ./tools/earthly.sh
-          working_dir: mongoc
-          args:
-            - +env-warmup
-            - --sasl=Cyrus
-            - --tls=OpenSSL
-            - --test_mongocxx_ref=r3.8.0
-            - --env=${MONGOC_EARTHLY_ENV}
-            - --c_compiler=${MONGOC_EARTHLY_C_COMPILER}
-      - command: subprocess.exec
-        type: test
-        params:
-          binary: ./tools/earthly.sh
-          working_dir: mongoc
-          args:
-            - +run
-            - --targets=test-example test-cxx-driver
-            - --sasl=Cyrus
-            - --tls=OpenSSL
-            - --test_mongocxx_ref=r3.8.0
             - --env=${MONGOC_EARTHLY_ENV}
             - --c_compiler=${MONGOC_EARTHLY_C_COMPILER}
   - name: "check:sasl=Cyrus\_\u2022\_tls=OpenSSL\_\u2022\_test_mongocxx_ref=r3.9.0"
@@ -1286,46 +1206,6 @@ tasks:
             - --test_mongocxx_ref=none
             - --env=${MONGOC_EARTHLY_ENV}
             - --c_compiler=${MONGOC_EARTHLY_C_COMPILER}
-  - name: "check:sasl=Cyrus\_\u2022\_tls=off\_\u2022\_test_mongocxx_ref=r3.8.0"
-    run_on:
-      - ubuntu2204-large
-      - debian10-large
-      - debian11-large
-      - amazon2
-    tags: [earthly, pr-merge-gate, alpine3.16-clang, alpine3.16-gcc, alpine3.17-clang, alpine3.17-gcc, alpine3.18-clang, alpine3.18-gcc, alpine3.19-clang, alpine3.19-gcc, archlinux-clang, archlinux-gcc, u18-clang, u20-clang, u20-gcc, u22-clang, u22-gcc]
-    commands:
-      - command: subprocess.exec
-        type: setup
-        params:
-          binary: bash
-          args:
-            - -c
-            - docker login -u "${artifactory_username}" --password-stdin artifactory.corp.mongodb.com <<<"${artifactory_password}"
-      - command: subprocess.exec
-        type: setup
-        params:
-          binary: ./tools/earthly.sh
-          working_dir: mongoc
-          args:
-            - +env-warmup
-            - --sasl=Cyrus
-            - --tls=off
-            - --test_mongocxx_ref=r3.8.0
-            - --env=${MONGOC_EARTHLY_ENV}
-            - --c_compiler=${MONGOC_EARTHLY_C_COMPILER}
-      - command: subprocess.exec
-        type: test
-        params:
-          binary: ./tools/earthly.sh
-          working_dir: mongoc
-          args:
-            - +run
-            - --targets=test-example test-cxx-driver
-            - --sasl=Cyrus
-            - --tls=off
-            - --test_mongocxx_ref=r3.8.0
-            - --env=${MONGOC_EARTHLY_ENV}
-            - --c_compiler=${MONGOC_EARTHLY_C_COMPILER}
   - name: "check:sasl=Cyrus\_\u2022\_tls=off\_\u2022\_test_mongocxx_ref=r3.9.0"
     run_on:
       - ubuntu2204-large
@@ -1364,46 +1244,6 @@ tasks:
             - --sasl=Cyrus
             - --tls=off
             - --test_mongocxx_ref=r3.9.0
-            - --env=${MONGOC_EARTHLY_ENV}
-            - --c_compiler=${MONGOC_EARTHLY_C_COMPILER}
-  - name: "check:sasl=off\_\u2022\_tls=OpenSSL\_\u2022\_test_mongocxx_ref=r3.8.0"
-    run_on:
-      - ubuntu2204-large
-      - debian10-large
-      - debian11-large
-      - amazon2
-    tags: [earthly, pr-merge-gate, u22-gcc]
-    commands:
-      - command: subprocess.exec
-        type: setup
-        params:
-          binary: bash
-          args:
-            - -c
-            - docker login -u "${artifactory_username}" --password-stdin artifactory.corp.mongodb.com <<<"${artifactory_password}"
-      - command: subprocess.exec
-        type: setup
-        params:
-          binary: ./tools/earthly.sh
-          working_dir: mongoc
-          args:
-            - +env-warmup
-            - --sasl=off
-            - --tls=OpenSSL
-            - --test_mongocxx_ref=r3.8.0
-            - --env=${MONGOC_EARTHLY_ENV}
-            - --c_compiler=${MONGOC_EARTHLY_C_COMPILER}
-      - command: subprocess.exec
-        type: test
-        params:
-          binary: ./tools/earthly.sh
-          working_dir: mongoc
-          args:
-            - +run
-            - --targets=test-example test-cxx-driver
-            - --sasl=off
-            - --tls=OpenSSL
-            - --test_mongocxx_ref=r3.8.0
             - --env=${MONGOC_EARTHLY_ENV}
             - --c_compiler=${MONGOC_EARTHLY_C_COMPILER}
   - name: clang-format
